...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SearchActivity">

    <SearchView
        android:id="@+id/SearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:queryHint="Search Items..."
        android:iconifiedByDefault="false"
        app:layout_constraintTop_toTopOf="parent" >
    </SearchView>


    <ListView
        android:id="@+id/myList"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></ListView>
...
