...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.listActivity.GroceryListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="36dp"
        app:layout_constrainedHeight="true"
        tools:layout_editor_absoluteX="0dp">

...
