...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></TextView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_department"
        android:layout_width="380dp"
        android:layout_height="140dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="44dp"
        style="@style/CustomCardView"
        app:layout_constraintEnd_toEndOf="parent"
...
